UPDATE templates.properties sort properties in sections

--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -45,7 +45,7 @@
                     {{ LayoutContainer.show("Ceres::Basket.BeforeCheckoutButton") }}
                     <a v-waiting-animation-infinite class="btn btn-primary btn-block" href="/checkout">
                         <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                        {{ trans("Ceres::Template.orderCheckout") }}
+                        {{ trans("Ceres::Template.basketCheckout") }}
                     </a>
                     {{ LayoutContainer.show("Ceres::Basket.AfterCheckoutButton") }}
                 </div>
