--- a/resources/views/Basket/Components/BasketPreviewHover.twig
+++ b/resources/views/Basket/Components/BasketPreviewHover.twig
@@ -15,7 +15,7 @@
                 </header>
 
                 <basket-list class="item-list" v-if="basketItems.length" template="#vue-basket-list" size="small"></basket-list>
-                <div class="no-items" v-else>{{ trans("Ceres::Template.orderNoItemsInBasket") }}</div>
+                <div class="no-items" v-else>{{ trans("Ceres::Template.basketNoItems") }}</div>
 
                 <div class="basket-totals" v-if="basketItems.length">
 
@@ -41,9 +41,9 @@
                             {{ LayoutContainer.show("Ceres::BasketPreview.BeforeCheckoutButton") }}
 
                             <div>
-                                <a v-waiting-animation-infinite href="/checkout" class="btn btn-primary btn-block checkOutBtn" title="{{ trans("Ceres::Template.orderCheckout") }}">
+                                <a v-waiting-animation-infinite href="/checkout" class="btn btn-primary btn-block checkOutBtn" title="{{ trans("Ceres::Template.basketCheckout") }}">
                                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                                    {{ trans("Ceres::Template.orderCheckout") }}
+                                    {{ trans("Ceres::Template.basketCheckout") }}
                                 </a>
                             </div>
             
