--- a/resources/views/Customer/Components/Contact/ContactCard.twig
+++ b/resources/views/Customer/Components/Contact/ContactCard.twig
@@ -102,7 +102,7 @@
     {% if "vatNumber" in showData or showData == 'all' %}
 		<p class="m-y-0 contact-vat-number">
 			<i class="fa fa-fw" aria-hidden="true"></i>
-			<span class="d-inline-block vat-number-field">{{ trans("Ceres::Template.accVatNumber") }}:</span><br>
+			<span class="d-inline-block vat-number-field">{{ trans("Ceres::Template.contactVatNumber") }}:</span><br>
 			<span class="d-inline-block">{{ vat }}</span>
 		</p>
     {% endif %}
