--- a/resources/views/Item/Components/AddToWishList.twig
+++ b/resources/views/Item/Components/AddToWishList.twig
@@ -2,7 +2,7 @@
     <div class="col-xs-12">
         <a class="text-muted small add-to-wish-list" :class="{active: $data._isActive}" @click.prevent="switchState()" data-toggle="tooltip" data-placement="top" title="">
             <i v-waiting-animation="isLoading" class="fa fa-heart"></i>
-            {{ trans("Ceres::Template.itemWishList") }}
+            {{ trans("Ceres::Template.singleItemWishList") }}
         </a>
     </div>
 </script>
