--- a/resources/views/Item/Components/OrderPropertyListItem.twig
+++ b/resources/views/Item/Components/OrderPropertyListItem.twig
@@ -32,7 +32,7 @@
         <div v-else-if="inputType === 'selection'">
             <div class="input-unit">
                 <select class="custom-select">
-                    <option :selected="true" :value="null">{{ trans("Ceres::Template.pleaseSelect") }}</option>
+                    <option :selected="true" :value="null">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
                 </select>
                 <label>${property.names.name}</label>
             </div>
