--- a/resources/views/MyAccount/Components/History.twig
+++ b/resources/views/MyAccount/Components/History.twig
@@ -8,7 +8,7 @@
 				<a class="nav-link active" data-toggle="tab" href="#order-history-tab" role="tab" aria-expanded="true">{{ trans("Ceres::Template.orderHistory") }}</a>
 			</li>
 			<li class="nav-item" v-if="isReturnActive && contactHasReturns">
-				<a @click="returnsTabsOpened()" class="nav-link" data-toggle="tab" href="#order-return-tab" role="tab" aria-expanded="false">{{ trans("Ceres::Template.myAccountReturnHistory") }}</a>
+				<a @click="returnsTabsOpened()" class="nav-link" data-toggle="tab" href="#order-return-tab" role="tab" aria-expanded="false">{{ trans("Ceres::Template.returnHistory") }}</a>
 			</li>
 		</ul>	
 
