--- a/resources/views/PageDesign/Partials/VueError.twig
+++ b/resources/views/PageDesign/Partials/VueError.twig
@@ -51,14 +51,14 @@
                 <div class="jumbotron col-md-8 offset-md-2 m-y-3">
                     <h1 class="m-b-2">
                         <span class="fa fa-warning text-danger"></span>
-                        {{ trans("Ceres::Template.vueErrorTitle") }}
+                        {{ trans("Ceres::Template.devVueErrorTitle") }}
                     </h1>
                     <p class="lead">
                         {% autoescape false %}
-                        {{ trans("Ceres::Template.vueErrorMessage") }}
+                        {{ trans("Ceres::Template.devVueErrorMessage") }}
                         {% endautoescape %}
                     </p>
-                    <a href="{{ trans("Ceres::Template.vueErrorLinkURL") }}" target="_blank" class="btn btn-primary btn-lg">{{ trans("Ceres::Template.vueErrorLink") }}</a>
+                    <a href="{{ trans("Ceres::Template.devVueErrorLinkURL") }}" target="_blank" class="btn btn-primary btn-lg">{{ trans("Ceres::Template.devVueErrorLink") }}</a>
                     <hr>
                 </div>
             </div>
