--- a/resources/views/StaticPages/PageNotFound.twig
+++ b/resources/views/StaticPages/PageNotFound.twig
@@ -18,7 +18,7 @@
                             <p class="lead">{{ trans("Ceres::Template.notFoundPage") }}</p>
                             <hr class="m-y-2">
                             <p class="lead">
-                                <a class="btn btn-primary btn-lg" href="/" role="button"><i class="fa fa-home" aria-hidden="true"></i> {{ trans("Ceres::Template.generalHomepage") }}</a>
+                                <a class="btn btn-primary btn-lg" href="/" role="button"><i class="fa fa-home" aria-hidden="true"></i> {{ trans("Ceres::Template.notFoundHomepage") }}</a>
                             </p>
                         </div>
                         <div class="col-md-6 text-md-right not-found-text">
