--- a/resources/views/WishList/Components/WishList.twig
+++ b/resources/views/WishList/Components/WishList.twig
@@ -4,7 +4,7 @@
         {% include "Ceres::WishList.Components.WishListItem" %}
 
         <transition name="wish-list-no-items-transition">
-            <p class="h4 text-muted wish-list-no-items-label" v-if="!wishListIds[0]">{{ trans("Ceres::Template.itemWishListNoItems") }}</p>
+            <p class="h4 text-muted wish-list-no-items-label" v-if="!wishListIds[0]">{{ trans("Ceres::Template.wishListNoItems") }}</p>
         </transition>
 
         <div :class="{'loading': isLoading}">
