--- a/resources/views/Basket/Components/AddToBasket.twig
+++ b/resources/views/Basket/Components/AddToBasket.twig
@@ -3,12 +3,12 @@
 <script type="x/template" id="vue-add-to-basket">
     <div>
         <div :class="{'no-pointer-events': waiting}" class="add-to-basket-lg-container hidden-md-down" v-if="!showQuantity && useLargeScale && canBeAddedToBasket"
-             v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.addToBasket") }}" @click="addToBasket()">
+             v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.singleItemAddToBasket") }}" @click="addToBasket()">
             <i v-waiting-animation="waiting" class="fa fa-cart-plus fa-lg mobile-icon-right"></i>
         </div>
 
         <div class="add-to-basket-lg-container hidden-md-down" v-if="!showQuantity && useLargeScale && !canBeAddedToBasket"
-             v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.showItem") }}" @click="directToItem()">
+             v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.itemShowItem") }}" @click="directToItem()">
             <i class="fa fa-arrow-right fa-lg mobile-icon-right"></i>
         </div>
 
@@ -28,22 +28,22 @@
                                         template="#vue-quantity-input"></quantity-input>
                         </div>
 
-                        <button v-if="!isVariationSelected" class="btn btn-block btn-primary disabled" v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.itemPleaseSelectValidVariation") }}">
+                        <button v-if="!isVariationSelected" class="btn btn-block btn-primary disabled" v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.singleItemPleaseSelectValidVariation") }}">
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            {{ trans("Ceres::Template.addToBasket") }}
+                            {{ trans("Ceres::Template.singleItemAddToBasket") }}
                         </button>
                         <button v-else-if="!buttonLockState" :disabled="waiting" class="btn btn-block btn-primary" @click="addToBasket()">
                             <i v-waiting-animation="waiting" class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            {{ trans("Ceres::Template.addToBasket") }}
+                            {{ trans("Ceres::Template.singleItemAddToBasket") }}
                         </button>
                         <button v-else
                                 class="btn btn-block btn-primary disabled"
                                 v-tooltip
                                 data-toggle="tooltip"
                                 data-placement="top"
-                                :title="'Ceres::Template.orderQuantityMax' | translate({max: item.variation.maximumOrderQuantity})">
+                                :title="'Ceres::Template.singleItemQuantityMax' | translate({max: item.variation.maximumOrderQuantity})">
                             <i v-waiting-animation="waiting" class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            {{ trans("Ceres::Template.addToBasket") }}
+                            {{ trans("Ceres::Template.singleItemAddToBasket") }}
                         </button>
                     </div>
                 </div>
@@ -55,11 +55,11 @@
             <div class="btn-group" role="group" aria-label="Thumb Control">
                 <button type="button" :class="{'no-pointer-events': waiting}" v-if="canBeAddedToBasket" class="btn btn-outline-primary mobile-width-button" @click="addToBasket()">
                     <i class="fa fa-cart-plus fa-lg mobile-icon-right" aria-hidden="true"></i>
-                    <span class="mobile-text-only">{{ trans("Ceres::Template.addToBasket") }}</span>
+                    <span class="mobile-text-only">{{ trans("Ceres::Template.singleItemAddToBasket") }}</span>
                 </button>
                 <button type="button" v-if="!canBeAddedToBasket" class="btn btn-outline-primary mobile-width-button" @click="directToItem()">
                     <i class="fa fa-arrow-right fa-lg mobile-icon-right" aria-hidden="true"></i>
-                    <span class="mobile-text-only">{{ trans("Ceres::Template.showItem") }}</span>
+                    <span class="mobile-text-only">{{ trans("Ceres::Template.itemShowItem") }}</span>
                 </button>
             </div>
         </div>
