--- a/resources/views/Checkout/Components/PlaceOrder.twig
+++ b/resources/views/Checkout/Components/PlaceOrder.twig
@@ -7,7 +7,7 @@
             {{ buttonReplacement }}
         {% else %}
             <button class="btn btn-success btn-block" @click="placeOrder()" :disabled="waiting || isBasketLoading || !isBasketInitiallyLoaded">
-                <i v-waiting-animation="waiting" class="fa fa-arrow-right" aria-hidden="true"></i> {{ trans("Ceres::Template.orderBuyNow") }}
+                <i v-waiting-animation="waiting" class="fa fa-arrow-right" aria-hidden="true"></i> {{ trans("Ceres::Template.checkoutBuyNow") }}
             </button>
         {% endif %}
     </div>
