--- a/resources/views/Customer/Components/AddressSelect/CreateUpdateAddress.twig
+++ b/resources/views/Customer/Components/AddressSelect/CreateUpdateAddress.twig
@@ -7,7 +7,7 @@
             <address-input-group template="#vue-address-input-group" :address-type="addressType" :modal-type="modalType" :value="addressData" @input="emitInputEvent($event)"></address-input-group>
 
             <div class="col-xs-12">
-                <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.generalSave") }}</button>
+                <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.addressSave") }}</button>
             </div>
         </div>
     </form>
@@ -17,7 +17,7 @@
             <address-input-group template="#vue-address-input-group" :address-type="addressType" :modal-type="modalType" :value="addressData" @input="emitInputEvent($event)"></address-input-group>
 
             <div class="col-xs-12">
-                <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.generalSave") }}</button>
+                <button type="button" class="btn btn-primary btn-block" @click="validate" :disabled="waiting">{{ trans("Ceres::Template.addressSave") }}</button>
             </div>
         </div>
     </form>
