--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -15,7 +15,7 @@
 	<div class="row cmp-contact">
 
 		<div class="col-xs-12">
-			<h1>{{ trans("Ceres::Template.generalContact") }}</h1>
+			<h1>{{ trans("Ceres::Template.contact") }}</h1>
 
 			<hr>
 
@@ -65,7 +65,7 @@
 						<div class="col-xs-12 col-md-6 m-b-1">
 							<div class="input-unit">
 								<input type="order" name="order" v-model="orderId" id="txt_order">
-								<label for="txt_order">{{ trans("Ceres::Template.contactOrderId") }} ({{ trans("Ceres::Template.generalOptional") }})</label>
+								<label for="txt_order">{{ trans("Ceres::Template.contactOrderId") }} ({{ trans("Ceres::Template.contactOptional") }})</label>
 							</div>
 						</div>
 
@@ -77,7 +77,7 @@
 							<div class="error-feedback">{{ trans("Ceres::Template.contactEditMessage") }}</div>
 						</div>
 
-						<div class="col-xs-12 text-sm-right">* {{ trans("Ceres::Template.generalRequiredField") }}</div>
+						<div class="col-xs-12 text-sm-right">* {{ trans("Ceres::Template.contactRequiredField") }}</div>
 					</form>
 				</div>
 
