--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -4,38 +4,38 @@
     <div class="row m-b-3">
         <form :id="'reset-password-form-' + _uid" class="m-b-1">
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                <span class="error-save-pwd-msg">{{ trans("Ceres::Template.accCheckPassword") }}</span>
+                <span class="error-save-pwd-msg">{{ trans("Ceres::Template.resetPwCheckPassword") }}</span>
                 <div class="input-unit" data-validate="password">
                     <popper v-cloak trigger="focus" placement="right" ref="passwordHint">
                         <input slot="handle" type="password" name="password" id="txt_password_first" v-model="passwordFirst">
                         <div slot="title">
-                            {{ trans("Ceres::Template.accPasswordHintTitle") }}
+                            {{ trans("Ceres::Template.resetPwPasswordHintTitle") }}
                         </div>
                         <ul slot="content" class="p-l-1">
-                            <li>{{ trans("Ceres::Template.accPasswordHintLength") }}</li>
-                            <li>{{ trans("Ceres::Template.accPasswordHintDigit") }}</li>
-                            <li>{{ trans("Ceres::Template.accPasswordHintChar") }}</li>
+                            <li>{{ trans("Ceres::Template.resetPwPasswordHintLength") }}</li>
+                            <li>{{ trans("Ceres::Template.resetPwPasswordHintDigit") }}</li>
+                            <li>{{ trans("Ceres::Template.resetPwPasswordHintChar") }}</li>
                         </ul>
                     </popper>
                     
-                    <label for="txt_password_first">{{ trans("Ceres::Template.accNewPassword") }}*</label>
+                    <label for="txt_password_first">{{ trans("Ceres::Template.resetPwNewPassword") }}*</label>
                 </div>
-                <span class="error-msg">{{ trans("Ceres::Template.accInvalidPassword") }}</span>
+                <span class="error-msg">{{ trans("Ceres::Template.resetPwInvalidPassword") }}</span>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <div class="input-unit" data-validate="text">
                     <input type="password" name="password" id="txt_password_second" v-model="passwordSecond">
-                    <label for="txt_password_second">{{ trans("Ceres::Template.accRepeatPassword") }}*</label>
+                    <label for="txt_password_second">{{ trans("Ceres::Template.resetPwRepeatPassword") }}*</label>
                 </div>
-                <span class="error-msg">{{ trans("Ceres::Template.accRepeatNewPassword") }}</span>
+                <span class="error-msg">{{ trans("Ceres::Template.resetPwRepeatNewPassword") }}</span>
             </div>
         </form>
 
         <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 m-t-1 text-sm-right">
             <button @click="validatePassword" class="btn btn-primary save-new-pwd-btn" :disabled="isDisabled">
                 <i class="fa fa-floppy-o" aria-hidden="true"></i>
-                {{ trans("Ceres::Template.generalSave") }}
+                {{ trans("Ceres::Template.resetPwSave") }}
             </button>
         </div>
     </div>
