--- a/resources/views/Customer/ResetPassword.twig
+++ b/resources/views/Customer/ResetPassword.twig
@@ -2,7 +2,7 @@
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
-    <title>{{ trans("Ceres::Template.accResetPassword") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.resetPwResetPassword") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
 
 {% block PageBody %}
@@ -11,7 +11,7 @@
     <div class="container-max reset-pwd m-b-3">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 m-b-2">
-                <h1 class="h2">{{ trans("Ceres::Template.accResetPassword") }}</h1>
+                <h1 class="h2">{{ trans("Ceres::Template.resetPwResetPassword") }}</h1>
             </div>
         </div>
 
