--- a/resources/views/Customer/ResetPasswordMail.twig
+++ b/resources/views/Customer/ResetPasswordMail.twig
@@ -1,3 +1,3 @@
-{% set mailContent = trans("Ceres::Template.resetPasswordMail") | replace({ '<firstname>': firstname, '<lastname>': lastname, '<email>': email, '<url>': url, '<shopname>': shopname }) %}
+{% set mailContent = trans("Ceres::Template.resetPwMail") | replace({ '<firstname>': firstname, '<lastname>': lastname, '<email>': email, '<url>': url, '<shopname>': shopname }) %}
 
 {{ mailContent | raw }}
