--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -6,7 +6,7 @@
                 <div class="card">
                     <span class="item-inner">
                         <span class="item-content">
-                            <p class="text-muted small font-italic p-t-1">- {{ trans("Ceres::Template.bankNoBankData") }} -</p>
+                            <p class="text-muted small font-italic p-t-1">- {{ trans("Ceres::Template.myAccountBankNoBankData") }} -</p>
                         </span>
                     </span>
                 </div>
@@ -22,7 +22,7 @@
                         </span>
 
                         <span class="item-content" v-show="!selectedBankData">
-                            <p class="text-muted small font-italic p-t-1">- {{ trans("Ceres::Template.pleaseSelect") }} -</p>
+                            <p class="text-muted small font-italic p-t-1">- {{ trans("Ceres::Template.myAccountPleaseSelect") }} -</p>
                         </span>
                     </span>
                 </div>
@@ -42,13 +42,13 @@
                                     <span class="item-edit" @click.prevent="openUpdateBank(index, bankData)">
                                         <button class="btn btn-primary btn-medium" @click.prevent="openUpdateBank(index, bankData)">
                                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                            {{ trans("Ceres::Template.generalEdit") }}
+                                            {{ trans("Ceres::Template.myAccountEdit") }}
                                         </button>
                                     </span><!--
                                 --><span class="item-remove" @click.prevent="openDeleteBank(index, bankData)">
                                         <button class="btn btn-medium btn-remove-address" @click.prevent="openDeleteBank(index, bankData)">
                                             <i class="fa fa-times" aria-hidden="true"></i>
-                                            {{ trans("Ceres::Template.generalDelete") }}
+                                            {{ trans("Ceres::Template.myAccountDelete") }}
                                         </button>
                                     </span>
                                 </div>
@@ -60,7 +60,7 @@
             --><div class="add-item">
                 <button href="#" class="btn btn-primary" @click.prevent="openAddBank()">
                     <i class="fa fa-plus-square" aria-hidden="true"></i>
-                    {{ trans("Ceres::Template.bankAddDataTitle") }}
+                    {{ trans("Ceres::Template.myAccountBankAddDataTitle") }}
                 </button>
             </div>
         </div>
@@ -83,13 +83,13 @@
                                         <div class="col-xs-12">
                                             <div class="input-unit accountOwner" data-validate="text">
                                                 <input type="text" name="kontoinhaber" v-model="updateBankData.accountOwner">
-                                                <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.accHolder") }}*</label>
+                                                <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.myAccountHolder") }}*</label>
                                             </div>
                                         </div>
                                         <div class="col-xs-12">
                                             <div class="input-unit">
                                                 <input type="text" name="kreditInstitut" v-model="updateBankData.bankName">
-                                                <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.bank") }}</label>
+                                                <label :for="'txt_firma' + _uid">{{ trans("Ceres::Template.myAccountBank") }}</label>
                                             </div>
                                         </div>
                                         <div class="col-xs-12">
@@ -101,7 +101,7 @@
                                         <div class="col-xs-12">
                                             <div class="input-unit no-bottom" data-validate="regex">
                                                 <input type="text" name="bic" data-validate-ref="/([a-zA-Z]{4}[a-zA-Z]{2}[a-zA-Z0-9]{2}([a-zA-Z0-9]{3})?)/" v-model="updateBankData.bic">
-                                                <label :for="'txt_firma' + _uid">BIC* - {{ trans("Ceres::Template.bankBicNotification") }}</label>
+                                                <label :for="'txt_firma' + _uid">BIC* - {{ trans("Ceres::Template.myAccountBankBicNotification") }}</label>
                                             </div>
                                         </div>
                                     </div>
@@ -111,7 +111,7 @@
                         <div class="modal-footer">
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <button type="button" class="btn btn-primary btn-block" @click="validateInput()">{{ trans("Ceres::Template.generalSave") }}</button>
+                                    <button type="button" class="btn btn-primary btn-block" @click="validateInput()">{{ trans("Ceres::Template.myAccountSave") }}</button>
                                 </div>
                             </div>
                         </div>
@@ -128,22 +128,22 @@
                             <button type="button" class="close" @click="closeDeleteModal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
-                            <h4 class="modal-title">{{ trans("Ceres::Template.bankDeleteTitle") }}</h4>
+                            <h4 class="modal-title">{{ trans("Ceres::Template.myAccountBankDeleteTitle") }}</h4>
                         </div>
 
                         <div class="modal-body">
                             <fieldset>
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <label>{{ trans("Ceres::Template.bankDeleteWarning") }}</label>
+                                        <label>{{ trans("Ceres::Template.myAccountBankDeleteWarning") }}</label>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-3 offset-sm-6">
-                                        <button type="button" class="btn btn-primary btn-block" @click="closeDeleteModal">{{ trans("Ceres::Template.generalCancel") }}</button>
+                                        <button type="button" class="btn btn-primary btn-block" @click="closeDeleteModal">{{ trans("Ceres::Template.myAccountCancel") }}</button>
                                     </div>
                                     <div class="col-sm-3">
-                                        <button type="button" class="btn btn-primary btn-block" @click="removeBankInfo">{{ trans("Ceres::Template.generalDelete") }}</button>
+                                        <button type="button" class="btn btn-primary btn-block" @click="removeBankInfo">{{ trans("Ceres::Template.myAccountDelete") }}</button>
                                     </div>
                                 </div>
                             </fieldset>
