--- a/resources/views/MyAccount/Components/OrderReturnHistoryItem.twig
+++ b/resources/views/MyAccount/Components/OrderReturnHistoryItem.twig
@@ -5,26 +5,26 @@
         <div class="item-details small">
 
             <div class="item-name">
-                <h5 class="h4">{{ trans("Ceres::Template.orderStatus") }}: ${ returnOrder.order.statusName }</h5>
+                <h5 class="h4">{{ trans("Ceres::Template.returnHistoryStatus") }}: ${ returnOrder.order.statusName }</h5>
             </div>
 
             <div class="row">
                 <div class="col-xs-12 col-md-12">
                     <div class="row">
                         <div class="col-md-2">
-                            <strong>{{ trans("Ceres::Template.myAccountReturnId") }}: </strong>
+                            <strong>{{ trans("Ceres::Template.returnHistoryReturnId") }}: </strong>
                             <span>${ returnOrder.order.id }</span>
                         </div>
                         <div class="col-md-2">
-                            <strong>{{ trans("Ceres::Template.orderId") }}: </strong>
+                            <strong>{{ trans("Ceres::Template.returnHistoryOrderId") }}: </strong>
                             <span>${ getOriginOrderId(returnOrder.order) }</span>
                         </div>
                         <div class="col-md-3">
-                            <strong>{{ trans("Ceres::Template.returnDate") }}: </strong>
-                            <span>${ returnOrder.order.createdAt | moment("{{ trans("Ceres::Template.dateTimeFormatMoment") }}") } {{ trans("Ceres::Template.time") }}</span>
+                            <strong>{{ trans("Ceres::Template.returnHistoryDate") }}: </strong>
+                            <span>${ returnOrder.order.createdAt | moment("{{ trans("Ceres::Template.devDateTimeFormatMoment") }}") } {{ trans("Ceres::Template.returnHistoryTime") }}</span>
                         </div>
                         <div class="col-md-3">
-                            <strong>{{ trans("Ceres::Template.orderPaymentMethod") }}: </strong>
+                            <strong>{{ trans("Ceres::Template.returnHistoryPaymentMethod") }}: </strong>
                             <span>${ returnOrder.paymentMethodName }</span>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                             <a :href="returnOrder.itemURLs[orderItem.itemVariationId]">
                                 <h2 class="h5 order-return-history-name">${ orderItem.orderItemName }</h2>
                             </a>
-                            <h2 class="h5 order-return-history-count">{{ trans("Ceres::Template.myAccountReturnCount") }}: ${ orderItem.quantity}</h2>
+                            <h2 class="h5 order-return-history-count">{{ trans("Ceres::Template.returnHistoryReturnCount") }}: ${ orderItem.quantity}</h2>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
             {# /show initial #}
             <hr class="gradient-hr" v-if="returnOrder.order.orderItems.length > 4">
             <a v-if="returnOrder.order.orderItems.length > 4" @click="toggleNaming('more-return-text-' + _uid)" :id="'more-return-text-' + _uid" class="show-more-returns" data-toggle="collapse" :href="'#more-return-items-' + _uid" aria-expanded="false" aria-controls="collapseExample">
-                {{ trans("Ceres::Template.myAccountReturnShowMore") }}
+                {{ trans("Ceres::Template.returnHistoryReturnShowMore") }}
             </a>
         </div>
     </article>
