--- a/resources/views/OrderReturn/Components/OrderReturn.twig
+++ b/resources/views/OrderReturn/Components/OrderReturn.twig
@@ -7,11 +7,11 @@
 
 		<button class="btn btn-primary btn-medium-large m-t-2" @click="selectAllItems()">
 			<i class="fa fa-check-square-o" aria-hidden="true"></i>
-			{{ trans("Ceres::Template.generalSelectAll") }}
+			{{ trans("Ceres::Template.returnSelectAll") }}
 		</button>
 		<button class="btn btn-primary btn-right btn-medium-large m-t-2" :disabled="isDisabled || isLoading" @click="showConfirmationModal()">
 			<i class="fa fa-arrow-right" aria-hidden="true"></i>
-			{{ trans("Ceres::Template.myAccountReturnTrigger") }}
+			{{ trans("Ceres::Template.returnTrigger") }}
 		</button>
 
 		{# confirmation modal #}
@@ -20,7 +20,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						<h3 class="modal-title">{{ trans("Ceres::Template.myAccountReturnSendBack") }}</h3>
+						<h3 class="modal-title">{{ trans("Ceres::Template.returnSendBack") }}</h3>
 					</div>
 					<div class="modal-body">
 						<ul>
@@ -31,7 +31,7 @@
 
 						<div class="input-unit textarea cmp-contact m-t-2">
 							<textarea id="contact_wish" class="no-resize" rows="5" @change="updateOrderReturnNote($event.target.value)"></textarea>
-							<label for="contact_wish">{{ trans("Ceres::Template.myAccountReturnReason") }}</label>
+							<label for="contact_wish">{{ trans("Ceres::Template.returnReason") }}</label>
 						</div>
 
 					</div>
@@ -40,13 +40,13 @@
 							 <div class="col-sm-3 offset-sm-6">
 								<button type="button" data-dismiss="modal" class="btn btn-secondary btn-block pull-xs-right btn-medium">
 									<i class="fa fa-times" aria-hidden="true"></i>
-									{{ trans("Ceres::Template.generalCancel") }}
+									{{ trans("Ceres::Template.returnCancel") }}
 								</button>		
 							</div>
 							 <div class="col-sm-3">
 								<button :disabled="isLoading" @click="sendReturnItems()" type="button" class="btn btn-primary btn-block pull-xs-right btn-medium">
 									<i v-waiting-animation="isLoading" class="fa fa-check" aria-hidden="true"></i>
-									{{ trans("Ceres::Template.generalConfirm") }}
+									{{ trans("Ceres::Template.returnConfirm") }}
 								</button>
 							</div>
 						</div>
