--- a/resources/views/OrderReturn/OrderReturnView.twig
+++ b/resources/views/OrderReturn/OrderReturnView.twig
@@ -2,7 +2,7 @@
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
-    <title>{{ trans("Ceres::Template.myAccountReturnCenter") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.returnCenter") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
 
 {% block PageBody %}
@@ -13,7 +13,7 @@
 
 		<div class="row m-t-1">
             <div class="col-xs-12">
-                <h1 class="h2">{{ trans("Ceres::Template.myAccountReturn") }}</h1>
+                <h1 class="h2">{{ trans("Ceres::Template.return") }}</h1>
             </div>
         </div>
 
