--- a/resources/views/WishList/WishListView.twig
+++ b/resources/views/WishList/WishListView.twig
@@ -1,7 +1,7 @@
 {% extends getPartial('page-design') %}
 
 {% block PartialHead %}
-    <title>{{ trans("Ceres::Template.itemWishList") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.wishList") }} | {{ config("Ceres.header.company_name") }}</title>
 {% endblock %}
 
 {% block PageBody %}
@@ -10,7 +10,7 @@
     <div class="page-content basket container-max m-b-3">
         <div class="row m-t-1">
             <div class="col-xs-12">
-                <h1 class="h2">{{ trans("Ceres::Template.itemWishList") }}</h1>
+                <h1 class="h2">{{ trans("Ceres::Template.wishList") }}</h1>
             </div>
         </div>
 
